# TablePivot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: table_pivot.cpp
